WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285532
[WebAuthn] Fix LAGetAssertionNoMockNoUserGesture in certain configurations
https://bugs.webkit.org/show_bug.cgi?id=285532
Summary
[WebAuthn] Fix LAGetAssertionNoMockNoUserGesture in certain configurations
pascoe@apple.com
Reported
2025-01-07 09:49:07 PST
TestWebKitAPI.WebAuthenticationPanel.LAGetAssertionNoMockNoUserGesture broke in certain configurations after
https://commits.webkit.org/280257@main
. This bug is to fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2025-01-07 09:49:17 PST
rdar://142481927
EWS
Comment 2
2025-01-14 12:59:00 PST
Committed
288882@main
(88bd83dcb06f): <
https://commits.webkit.org/288882@main
> Reviewed commits have been landed. Closing PR #38656 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug