[WebAuthn] Fix LAGetAssertionNoMockNoUserGesture in certain configurations rdar://142481927 https://bugs.webkit.org/show_bug.cgi?id=285532

Reviewed by Charlie Wolfe.

In certain configurations run by tests, WebKit may be ToT, while AS is an older version.
This causes LAGetAssertionNoMockNoUserGesture to break under these configurations after
https://commits.webkit.org/280257@main. To fix this, we do a selector check.

* Source/WebKit/Platform/spi/Cocoa/AuthenticationServicesCoreSPI.h:
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
(WebKit::configureAssertionOptions):

Canonical link: https://commits.webkit.org/288882@main